$Id$

version ? (????-??-??):

  - BTS#0000490: documentation: fixed pg_dump options (alec)

version 1.8.0rc2 Rosha (2005-12-12):

  - BTS#0000488: fixed title on nodes list printout (alec)
  - BTS#0000487: fixed printing from Invoices List (alec)
  - BTS#0000486: added duplicate and fixed invoices printing in
    Finance -> Print -> Invoices (alec)
  - added submit button in genfake interface (alec)
  - fixed solid payments accounting (alec)
  - fixed Liabilities Report: disposable and tariffless liabilities
    support, suspension and discount support, fixed sorting by value (alec)

version 1.8.0rc1 Rosha (2005-12-07):

  - BTS#0000216: now user with 'customers management' or 'nodes management'
    access don't need 'read only' access right (alec)
  - contrib/lms-debtors: added MySQL support (alec)
  - fixed traffic stats values in node informations (alec)
  - added link to customer stats in customer info page (alec)
  - BTS#0000471: fixed 'Tickets' link in customerinfo box (alec)
  - fixed summary on customer search results list (alec)
  - lmsd/parser: multiple logical expressions ("a && b && c" etc.) 
    supported, multiple instructions in one block supported - using
    semicolon (alec)
  - few fixes for very long customer names on pdf invoices and UI (alec)
  - fixed NetworkRemap() function when destination network is empty (alec)
  - changed link on nodes list in network info to node info instead of
    customerinfo (alec)
  - don't compress network when changing network address, user must 
    do commpression by himself (alec)
  - standardised sorting of transfer forms and invoices printouts (alec) 
  - BTS#0000481: fixed translation on transfer forms (alec)
  - invoices list display speed optimized (alec)
  - example invoices/cash records generation in genfake module (alec)
  - removed upgrade scripts for v.1.2 (alec)
  - lmsd/parser: tscript library - fixed problem with nested blocks (alec)